--- a/.projectConfig.json
+++ b/.projectConfig.json
@@ -1,1 +1,1 @@
-{"ignoredFilesOrFolders":[],"openFiles":["passwordManager/src/Components/PasswordManager/index.js","passwordManager/src/Components/password/index.css","passwordManager/src/Components/PasswordManager/index.css","passwordManager/src/App.css","passwordManager/src/Components/PasswordManager/colors.css","passwordManager/src/Components/Form/index.js","passwordManager/src/Components/Form/index.css","passwordManager/src/Components/password/index.js"],"fileToBeOpened":"passwordManager/src/App.js"}
+{"ignoredFilesOrFolders":[],"openFiles":[],"fileToBeOpened":""}
